fix: title is visible no the main page only; header is adaptive

--- a/src/components/Author/main.scss
+++ b/src/components/Author/main.scss
@@ -34,6 +34,10 @@ $headerColor: #ffa600;
   &__img {
     margin-bottom: 10px;
     box-shadow: 0 0 4px 1px black;
+    
+    &:hover{
+      cursor: pointer;
+    }
   }
 
   &__years {
