--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,12 +1,18 @@
 .header_content {
   width: 1100px;
 }
+
 .header_props {
   width: 1fr;
   background-color: unset!important;
 }
 .MuiBottomNavigationAction-root {
   color: #ffa600!important;
+  justify-content: space-evenly !important;
+
+  &:hover {
+    background-color: rgba($color: #6e4510, $alpha: 0.5);
+  }
 }
 
 .MuiButton-root {
@@ -15,4 +21,34 @@
 }
 .MuiMenu-paper {
   margin-left: 6px;
+}
+
+@media (max-width: 940px) {
+  .MuiBottomNavigationAction-root {
+    max-width: 100px !important;
+  }
+}
+
+@media (max-width: 600px) {
+  .MuiBottomNavigationAction-root {
+    max-width: 80px !important;
+  }
+}
+
+@media (max-width: 500px) {
+  .MuiBottomNavigationAction-root {
+    max-width: 60px !important;
+    min-width: 50px !important;
+  }
+}
+
+@media (max-width: 400px) {
+  .MuiBottomNavigationAction-root {
+    max-width: 50px !important;
+    min-width: 30px !important;
+  }
+
+  .MuiBottomNavigationAction-label{
+    display: none;
+  }
 }
